# c-template

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  sourcelist.cmake  version.h.in
include/c-template/: base.h  c_str.h
src/: c_str.c  lib.c  main.c
tests/: CMakeLists.txt
tests/litmus/: tests.h
tests/src/: c_str_tests.c  dummy_tests.c  tests.c
